# 3DChess

./: .gitignore  CMakeLists.txt  README.md
inc/: Common.hpp
inc/Chess/: Board.hpp  Common.hpp  Game.hpp  Move.hpp  Piece.hpp
inc/Controller/: Controller.hpp  GameState.hpp
inc/Renderer/: Background.hpp  Camera.hpp  Chessboard.hpp  Mesh.hpp  Renderer.hpp  UIBox.hpp
inc/Renderer/GPU/: VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
res/boards/: big.cfg  empty.cfg  full.cfg  idiot.cfg  standard.cfg  test.cfg
res/models/horse/: model.mtl
res/models/king/: model.mtl
res/shaders/: background.frag  background.vert  chessboard.frag  chessboard.vert  piece.frag  piece.vert  rect.frag  rect.vert  ui_box.frag  ui_box.vert
src/: main.cpp
src/Chess/: Board.cpp  Figures.cpp  Piece.cpp
src/Chess/Figures/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
src/Controller/: Controller.cpp
src/Renderer/: Camera.cpp  Chessboard.cpp  Renderer.cpp  UIBox.cpp
src/Renderer/GPU/: IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
